# toy-scaling-laws

./: .gitignore  README.md  data.py  model.py  pyproject.toml  sweep.py  train.py  validate.py
