[project]
name = "baby-scaling-laws"
version = "0.0.1"
description = "Minimal transformer for exploring scaling laws at character level"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.10.8",
    "tiktoken>=0.5",
]

[tool.ruff]
line-length = 120
indent-width = 4
