[project]
name = "toy-scaling-laws"
version = "0.0.1"
description = "Minimal transformer for exploring scaling laws at character level"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.10.8",
    "datasets>=4.5.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
